Changed file extension and the way variables were referenced

--- a/puppet/modules/rappture/templates/setup_jail.erb
+++ b/puppet/modules/rappture/templates/setup_jail.erb
@@ -1,7 +1,7 @@
 #!/bin/sh
 
-cd <%= $chroot_dir %>
-chroot <%= $chroot_dir %>
+cd <%= @chroot_dir %>
+chroot <%= @chroot_dir %>
 apt-get update
 apt-get -y upgrade
 apt-get -y install hubzero-rappture-session
