--- a/puppet/modules/exim4/templates/exim4.seeds.erb
+++ b/puppet/modules/exim4/templates/exim4.seeds.erb
@@ -2,7 +2,7 @@ exim4-config	exim4/dc_other_hostnames	string
 exim4-config	exim4/dc_eximconfig_configtype	select	internet site; mail is sent and received directly using SMTP
 exim4-config	exim4/no_config	boolean	true
 exim4-config	exim4/hide_mailname	boolean
-exim4-config	exim4/dc_postmaster	string
+exim4-config	exim4/dc_postmaster	string	mpaulo@v3.org.au
 exim4-config	exim4/dc_smarthost	string
 exim4-config	exim4/dc_relay_domains	string
 exim4-config	exim4/dc_relay_nets	string
@@ -12,4 +12,4 @@ exim4-config	exim4/use_split_config	boolean	false
 exim4-config	exim4/dc_localdelivery	select	mbox format in /var/mail/
 exim4-config	exim4/dc_local_interfaces	string	127.0.0.1 ; ::1
 exim4-config	exim4/dc_minimaldns	boolean	false
-
+exim4-config	exim4/dc_other_hostnames	string	<%= @fqdn %>
