--- a/puppet/modules/exim4/templates/exim4.seeds.erb
+++ b/puppet/modules/exim4/templates/exim4.seeds.erb
@@ -6,7 +6,7 @@ exim4-config	exim4/dc_postmaster	string	mpaulo@v3.org.au
 exim4-config	exim4/dc_smarthost	string
 exim4-config	exim4/dc_relay_domains	string
 exim4-config	exim4/dc_relay_nets	string
-exim4-config	exim4/mailname	string	<%= @fqdn -%>
+exim4-config	exim4/mailname	string	<%=@fqdn%>
 exim4-config	exim4/dc_readhost	string
 exim4-config	exim4/use_split_config	boolean	false
 exim4-config	exim4/dc_localdelivery	select	mbox format in /var/mail/
