--- a/puppet/modules/exim4/templates/exim4.seeds.erb
+++ b/puppet/modules/exim4/templates/exim4.seeds.erb
@@ -2,11 +2,11 @@ exim4-config	exim4/dc_other_hostnames	string
 exim4-config	exim4/dc_eximconfig_configtype	select	internet site; mail is sent and received directly using SMTP
 exim4-config	exim4/no_config	boolean	true
 exim4-config	exim4/hide_mailname	boolean
-exim4-config	exim4/dc_postmaster	string	<%=@postmaster%>
+exim4-config	exim4/dc_postmaster	string	<%=scope.lookupvar('exim4::postmaster')%>
 exim4-config	exim4/dc_smarthost	string
 exim4-config	exim4/dc_relay_domains	string
 exim4-config	exim4/dc_relay_nets	string
-exim4-config	exim4/mailname	string	<%=@fqdn%>
+exim4-config	exim4/mailname	string	<%=scope.lookupvar('exim4::fqdn')%>
 exim4-config	exim4/dc_readhost	string
 exim4-config	exim4/use_split_config	boolean	false
 exim4-config	exim4/dc_localdelivery	select	mbox format in /var/mail/
