--- a/puppet/modules/exim4/templates/exim4.seeds.erb
+++ b/puppet/modules/exim4/templates/exim4.seeds.erb
@@ -2,7 +2,7 @@ exim4-config	exim4/dc_other_hostnames	string
 exim4-config	exim4/dc_eximconfig_configtype	select	internet site; mail is sent and received directly using SMTP
 exim4-config	exim4/no_config	boolean	true
 exim4-config	exim4/hide_mailname	boolean
-exim4-config	exim4/dc_postmaster	string	<%=scope.lookupvar('exim4::postmaster')%> 
+exim4-config	exim4/dc_postmaster	string	mpaulo@v3.org.au
 exim4-config	exim4/dc_smarthost	string
 exim4-config	exim4/dc_relay_domains	string
 exim4-config	exim4/dc_relay_nets	string
