--- a/puppet/modules/nrpe/templates/check_all_disks.cfg.erb
+++ b/puppet/modules/nrpe/templates/check_all_disks.cfg.erb
@@ -1,2 +1,1 @@
-command[check_all_disks]=/usr/lib/nagios/plugins/check_disk -w 20% -c 10% 
-
+command[check_all_disks]=/usr/lib/nagios/plugins/check_disk -w 20% -c 10% --exclude-type=tmpfs --exclude-type=devpts --exclude-type=sysfs --exclude-type=proc --exclude-type=binfmt_misc --exclude-type=rpc_pipefs --exclude-type=nfs
